Fix get list topic and lesson by subject grade booktype and semester